--- a/charts/uptime-kuma/templates/deployment.yaml
+++ b/charts/uptime-kuma/templates/deployment.yaml
@@ -50,6 +50,32 @@ spec:
           volumeMounts:
             - mountPath: /app/data
               name: {{ template "uptime-kuma.name" . }}
+        {{- if .Values.tailscale.enabled }}
+        - name: tailscale
+          image: "{{ .Values.tailscale.image }}"
+          imagePullPolicy: IfNotPresent
+          env:
+            - name: TS_AUTHKEY
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ .Values.tailscale.authSecretName }}"
+                  key: TS_AUTHKEY
+            - name: TS_STATE_DIR
+              value: "/var/lib/tailscale"
+            - name: TS_SERVE_CONFIG
+              value: "/config/serve.json"
+            - name: TS_USERSPACE
+              value: "true"
+            - name: TS_HOSTNAME
+              value: "{{ .Values.tailscale.hostname }}"
+            - name: TS_EXTRA_ARGS
+              value: "--advertise-tags={{ .Values.tailscale.tags }}"
+          volumeMounts:
+            - name: tailscale-state
+              mountPath: /var/lib/tailscale
+            - name: tailscale-config
+              mountPath: /config
+        {{- end }}
       volumes:
         - name: {{ template "uptime-kuma.name" . }}
           {{- if .Values.persistence.enabled }}
@@ -57,7 +83,15 @@ spec:
             claimName: {{ template "uptime-kuma.fullname" . }}
           {{- else }}
           emptyDir: {}
-          {{- end -}}
+          {{- end }}
+        {{- if .Values.tailscale.enabled }}
+        - name: tailscale-state
+          persistentVolumeClaim:
+            claimName: tailscale-state
+        - name: tailscale-config
+          configMap:
+            name: tailscale-serve-config
+        {{- end -}}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
